--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <p>Öt faját, de sok változattal termesztik szerte a világon</p>
         <div>
             <ul>
-                <li>Közönséges paprika</li>
-                <li>Cserjés paprika</li>
-                <li>Kínai paprika</li>
-                <li>Bogyós paprika</li>
-                <li>Szőrös paprika</li>
+                <li><a href="sok.png" target="_blank">Közönséges paprika</a></li>
+                <li><a href="https://hu.wikipedia.org/wiki/Cserj%C3%A9s_paprika" target="_blank">Cserjés paprika</a></li>
+                <li><a href="https://hu.wikipedia.org/wiki/K%C3%ADnai_paprika" target="_blank">Kínai paprika</a></li>
+                <li><a href="https://hu.wikipedia.org/wiki/Bogy%C3%B3s_paprika" target="_blank">Bogyós paprika</a></li>
+                <li><a href="https://hu.wikipedia.org/wiki/Sz%C5%91r%C3%B6s_paprika" target="_blank">Szőrös paprika</a></li>
             </ul>
         </div>
     </menu>     
