--- a/index.html
+++ b/index.html
@@ -15,34 +15,30 @@
         <h1>Ismered a legcsípősebbet?</h1>
     </header>      
 
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+    <section class="top-nav">
+      <div>
+        Logo Here
+      </div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class='menu-button-container' for="menu-toggle">
+      <div class='menu-button'></div>
+    </label>
+      <ul class="menu">
+        <li><a href="sok.png" target="_blank">Közönséges paprika</a></li>
+        <li><a href="https://hu.wikipedia.org/wiki/Cserj%C3%A9s_paprika" target="_blank">Cserjés paprika</a></li>
+        <li><a href="https://hu.wikipedia.org/wiki/K%C3%ADnai_paprika" target="_blank">Kínai paprika</a></li>
+         <li><a href="https://hu.wikipedia.org/wiki/Bogy%C3%B3s_paprika" target="_blank">Bogyós paprika</a></li>
+        <li><a href="https://hu.wikipedia.org/wiki/Sz%C5%91r%C3%B6s_paprika" target="_blank">Szőrös paprika</a></li>
+      </ul>
+    </section>-->
 
-
-        
-
-    <nav class="navbar">
-        <div class="navbar-container container">
-            <input type="checkbox" name="" id="">
-            <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-            </div>
-            <ul class="menu-items">
-                <li><a href="sok.png" target="_blank">Közönséges paprika</a></li>
-                <li><a href="https://hu.wikipedia.org/wiki/Cserj%C3%A9s_paprika" target="_blank">Cserjés paprika</a></li>
-                <li><a href="https://hu.wikipedia.org/wiki/K%C3%ADnai_paprika" target="_blank">Kínai paprika</a></li>
-                <li><a href="https://hu.wikipedia.org/wiki/Bogy%C3%B3s_paprika" target="_blank">Bogyós paprika</a></li>
-                <li><a href="https://hu.wikipedia.org/wiki/Sz%C5%91r%C3%B6s_paprika" target="_blank">Szőrös paprika</a></li>
-            </ul>
-            <h1 class="logo"> </h1>
-        </div>
-    </nav>
 
 <menu>  
     <li><a href="sok.png" target="_blank">Közönséges paprika</a></li>
     <li><a href="https://hu.wikipedia.org/wiki/Cserj%C3%A9s_paprika" target="_blank">Cserjés paprika</a></li>
     <li><a href="https://hu.wikipedia.org/wiki/K%C3%ADnai_paprika" target="_blank">Kínai paprika</a></li>
-     <li><a href="https://hu.wikipedia.org/wiki/Bogy%C3%B3s_paprika" target="_blank">Bogyós paprika</a></li>
+    <li><a href="https://hu.wikipedia.org/wiki/Bogy%C3%B3s_paprika" target="_blank">Bogyós paprika</a></li>
     <li><a href="https://hu.wikipedia.org/wiki/Sz%C5%91r%C3%B6s_paprika" target="_blank">Szőrös paprika</a></li>
 </menu>     
         
